--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,17 @@ language: go
 go:
   - "1.11.x"
 
+services:
+  - mysql
+
 before_install:
   - go get github.com/golang/lint/golint
   - go get github.com/golang/dep/cmd/dep
 
 install: true
 
-services:
-  - mysql
+before_script:
+  - mysql -uroot -e "create database TEST"
 
 script: 
   - dep ensure
