--- a/.travis.yml
+++ b/.travis.yml
@@ -16,10 +16,11 @@ before_script:
   - make clean-all
   - make dep-install
   - make deps
+  - make create-dotenv
   - mysql -uroot -e "create database test"
 
 script: 
-  - dep ensure
-  - make create-dotenv
+  # - dep ensure
+  # - make create-dotenv
   - make
   - make test
