--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,13 @@ go:
 services:
   - mysql
 
-before_install:
-  - go get github.com/golang/lint/golint
-  - go get github.com/golang/dep/cmd/dep
+# before_install:
+#   - go get github.com/golang/lint/golint
+#   - go get github.com/golang/dep/cmd/dep
 
-install: true
+install:
+  - go get github.com/golang/lint/golint
+  # - go get github.com/golang/dep/cmd/dep
 
 before_script:
   - make clean-all
